<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/appTitle"
        android:id="@+id/main_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:id="@+id/about_button"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/main_title"
        android:layout_alignLeft="@+id/main_title"
        android:layout_alignStart="@+id/main_title"
        android:layout_alignRight="@+id/main_title"
        android:layout_alignEnd="@+id/main_title"
        android:clickable="true"
        android:onClick="InfoPage"
        android:backgroundTint="#3888b3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recoveryGuide"
        android:id="@+id/recovery_button"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/about_button"
        android:layout_alignLeft="@+id/about_button"
        android:layout_alignStart="@+id/about_button"
        android:layout_alignRight="@+id/about_button"
        android:layout_alignEnd="@+id/about_button"
        android:clickable="true"
        android:onClick="InfoPage"
        android:backgroundTint="#3888b3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whenToCall"
        android:id="@+id/whenToCall_button"
        android:layout_marginTop="27dp"
        android:clickable="true"
        android:onClick="InfoPage"
        android:backgroundTint="#3888b3"
        android:layout_below="@+id/recovery_button"
        android:layout_alignLeft="@+id/recovery_button"
        android:layout_alignStart="@+id/recovery_button"
        android:layout_toStartOf="@+id/addNew_button"
        android:layout_alignEnd="@+id/recovery_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage"
        android:id="@+id/manage_button"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/whenToCall_button"
        android:layout_alignLeft="@+id/whenToCall_button"
        android:layout_alignStart="@+id/whenToCall_button"
        android:layout_alignRight="@+id/whenToCall_button"
        android:layout_alignEnd="@+id/whenToCall_button"
        android:clickable="true"
        android:onClick="ManagePage"
        android:backgroundTint="#3888b3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:id="@+id/history_button"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/manage_button"
        android:layout_alignLeft="@+id/manage_button"
        android:layout_alignStart="@+id/manage_button"
        android:layout_alignRight="@+id/manage_button"
        android:layout_alignEnd="@+id/manage_button"
        android:clickable="true"
        android:onClick="ManageHistory"
        android:backgroundTint="#3888b3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addNew_button"
        android:layout_marginTop="27dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="Add Seizure"
        android:clickable="true"
        android:onClick="AddSeizure"
        android:backgroundTint="#3888b3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Angel Sensor"
        android:id="@+id/buttonAngelSensor"
        android:layout_alignBottom="@+id/addNew_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:clickable="true"
        android:onClick="ScanActivity"
        android:backgroundTint="#3888b3"/>


</RelativeLayout>
